[package]
name = "lotwire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = "0.11.20"
ringbuffer = "0.15.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.188"
tokio = "1.32.0"
